--- a/python/detectron2_package/configs/Misc/panoptic_fpn_R_101_dconv_cascade_gn_3x.yaml
+++ b/python/detectron2_package/configs/Misc/panoptic_fpn_R_101_dconv_cascade_gn_3x.yaml
@@ -1,4 +1,4 @@
-# A large PanopticFPN for demo purposes.
+# A large PanopticFPN for predictball purposes.
 # Use GN on backbone to support semantic seg.
 # Use Cascade + Deform Conv to improve localization.
 _BASE_: "../COCO-PanopticSegmentation/Base-Panoptic-FPN.yaml"
