--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -6,3 +6,7 @@ Pillow==9.0.1
 torch==1.9.1+cu111
 torchvision==0.10.1+cu111
 tqdm==4.61.0
+opencv-python~=4.5.5.64
+scipy~=1.6.3
+fvcore~=0.1.5
+detectron2~=0.6
